tests/negative/semantic/import_main_in_imported/input.ci
import "lib.ci";
void main(string[] args) {}
